--- a/index.html
+++ b/index.html
@@ -23,7 +23,151 @@
             </div>
         </header>
         <main>
+            <div class="central-main">
+                <div class="flexed container">
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
 
+                <div class="flexed container">
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="flexed container">
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="flexed container">
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="flexed container">
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="flexed container">
+                    <div class="images position">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                    <div class="images">
+                        <p><i class="fas fa-microphone-slash"></i> Pinco Pallo</p>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </body>
